--- a/frontend/src/screens/ProductScreenComp.css
+++ b/frontend/src/screens/ProductScreenComp.css
@@ -64,7 +64,9 @@
 	color: #f4f4f4;
 	border: 1px solid #171717;
 	cursor: pointer;
-	border-radius: 5px;
+}
+.productscreen-addbtn:hover {
+	opacity: 0.5;
 }
 
 @media (max-width: 960px) {
